syntax = "proto3";
package helloworld;
message Complex {
  string name = 1;
  repeated Enum myEnum = 2;
  map<string, string> myMap = 3;
}

enum Enum {
  VALUE1 = 0;
  VALUE2 = 1;
}
